syntax = "proto3";

// The realtime protocol for the template match engine.
package api;

option go_package = "github.com/ciaolink-game-platform/cgp-bing-module/api";

enum Color {
  COLOR_UNSPECIFIED = 0;
  COLOR_YELLOW = 1;
  COLOR_WHITE = 2;
  COLOR_PINK = 4;
  COLOR_BLUE = 8;
  COLOR_RED = 16;
  COLOR_GREEN = 32;
}

message BetResult {
  string user_id = 1;
  repeated ColorBet bets = 2;
  bool is_win = 3;  
}

message ColorGameFinish {
  repeated CellInfo roll_cells = 1;  
  repeated BetResult bet_results = 2;
}

message CellInfo {
  uint32 cell = 1;
  int32 pos = 2;
  int32 hit_roll = 3;
  repeated Color colors = 4;
}

message ColorBet {
  int32 id = 1;
  uint32 cell = 2;
  int64 chips = 3;
  int32 n_user_bet = 4;
  string desp = 5;
}

message Deck {
  repeated Color colors = 1;
  repeated CellInfo cell_infos = 2;
  repeated ColorBet bets = 3;
}

message UpdateDesk {
  int32 n_player = 1;
  bool update_user_bets = 2;
  repeated ColorBet user_bets = 3;
  bool update_cell_bets = 4;
  repeated ColorBet cell_bets = 5;
}